# neusa

./: .gitignore  README.md  burgers1d_NeuSA.py  burgers2d_NeuSA.py  burgers2d_baseline_models.py  burgers2d_extrapolation.py  klein_gordon_NeuSA.py  klein_gordon_NeuSA_extrapolation.py  klein_gordon_baseline_models.py  klein_gordon_triangular_NeuSA.py  klein_gordon_triangular_baseline_models.py  pyproject.toml  wave2d_marmousi_NeuSA.py  wave2d_marmousi_baseline_models.py  wave2d_three_layers_NeuSA.py  wave2d_three_layers_baseline_models.py  wave3d_NeuSA.py  wave3d_baseline_models.py
basis/: cosine1d.py  cosine2d.py  cosine3d.py  fourier1d.py  fourier2d.py  sine1d.py  sine2d.py
data/burgers2d/: t.txt  x.txt
data/klein_gordon/: t.txt  u.txt  v.txt  x.txt
data/klein_gordon_triangular/: t.txt  u.txt  x.txt
data/wave2d_marmousi/: velocity_profile.txt
data/wave2d_three_layers/: t.txt  y.txt
data_loaders/: burgers1d_data_loader.py  burgers2d_data_loader.py  burgers2d_extrap_data_loader.py  klein_gordon_data_loader.py  klein_gordon_triangular_data_loader.py  wave2d_three_layers_data_loader.py  wave3d_data_loader.py
models/: FLS.py  PINN.py  PINNsFormer.py  QRes.py  hadamard_layer.py  mlps.py  vector_fields.py
utilities/: eval_chunks.py  grid.py  interpolator.py  metrics.py  network_initialization.py  pinnsformer_utils.py  plot.py  trainer.py
